syntax = "proto3";

option go_package = "grpc/";

enum StatusCode {
	RECORD_OK = 0;
}

message IndexResonse {
	StatusCode code = 1; 
}

message Event {
	string eventID = 1;
	string objectID = 2;
	string data = 3;
}

service StreamingService {
	rpc Index(Event) returns (IndexResonse) {}
}
